<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.polytech.larynxapp.controller.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="fr.polytech.larynxapp.controller.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_Shimmer"
        android:name="fr.polytech.larynxapp.controller.evolution.EvolutionFragment"
        android:label="Shimmer"
        tools:layout="@layout/fragment_shimmer" />

    <fragment
        android:id="@+id/navigation_Jitter"
        android:name="fr.polytech.larynxapp.controller.jitter.JitterFragment"
        android:label="Jitter"
        tools:layout="@layout/fragment_jitter" />

</navigation>