<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/circle"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/ic_circle"
            android:contentDescription="@string/font_mic"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:foreground="@drawable/ic_repeat"
            android:background="@color/transparent"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/mic_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/ic_circle"
            android:contentDescription="@string/font_mic"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/save"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_save"
            android:contentDescription="@string/font_mic" />

    </RelativeLayout>

    </LinearLayout>