package fr.polytech.larynxapp;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.runner.AndroidJUnit4;

import junit.framework.AssertionFailedError;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.allOf;

/**
 * Espresso Test for the main activity
 */
@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.RECORD_AUDIO",
                    "android.permission.WRITE_EXTERNAL_STORAGE");

    @Test
    public void mainActivityTest() {

        ViewInteraction bottomNavigationItemView = onView(
                allOf(withId(R.id.navigation_history), withContentDescription("Historique"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.nav_view),
                                        0),
                                1),
                        isDisplayed()));
        bottomNavigationItemView.perform(click());

//        ViewInteraction bottomNavigationItemView2 = onView(
//                allOf(withId(R.id.navigation_home), withContentDescription("Accueil"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                0),
//                        isDisplayed()));
//        bottomNavigationItemView2.perform(click());

//        ViewInteraction bottomNavigationItemView3 = onView(
//                allOf(withId(R.id.navigation_Shimmer), withContentDescription("Shimmer"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                2),
//                        isDisplayed()));
//        bottomNavigationItemView3.perform(click());

//        ViewInteraction bottomNavigationItemView4 = onView(
//                allOf(withId(R.id.navigation_Jitter), withContentDescription("Jitter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                3),
//                        isDisplayed()));
//        bottomNavigationItemView4.perform(click());

//        ViewInteraction appCompatImageView = onView(
//                allOf(withId(R.id.mic_button),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView.perform(click());

//        ViewInteraction appCompatImageView2 = onView(
//                allOf(withId(R.id.mic_button), withContentDescription("font of the mic"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView2.perform(click());

//        ViewInteraction appCompatImageView3 = onView(
//                allOf(withId(R.id.mic_button), withContentDescription("font of the mic"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView3.perform(click());

//        ViewInteraction appCompatImageView4 = onView(
//                allOf(withId(R.id.mic_button), withContentDescription("font of the mic"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView4.perform(click());
//
//        ViewInteraction appCompatImageView5 = onView(
//                allOf(withId(R.id.mic_button), withContentDescription("font of the mic"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView5.perform(click());

//        ViewInteraction appCompatImageView6 = onView(
//                allOf(withId(R.id.mic_button), withContentDescription("font of the mic"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                1),
//                        isDisplayed()));
//        appCompatImageView6.perform(click());

//        try {
//            onView(withId(R.id.reset_button)).check(matches(isDisplayed()));
//            // Reset button is displayed
//            onView(withId(R.id.reset_button)).perform(click());
//        }
//        catch (AssertionFailedError e) {
//            // View not displayed
//        }
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.reset_button),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_host_fragment),
//                                        0),
//                                0),
//                        isDisplayed()));
//        appCompatButton.perform(click());

//        ViewInteraction frameLayout = onView(
//                allOf(withId(R.id.navigation_Shimmer), withContentDescription("Shimmer"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                2),
//                        isDisplayed()));
//        frameLayout.check(matches(isDisplayed()));

//        ViewInteraction frameLayout2 = onView(
//                allOf(withId(R.id.navigation_history), withContentDescription("Historique"),
//                childAtPosition(
//                        childAtPosition(
//                                withId(R.id.nav_view),
//                                0),
//                        1),
//                isDisplayed()));
//        frameLayout2.check(matches(isDisplayed()));

//        ViewInteraction frameLayout3 = onView(
//                allOf(withId(R.id.navigation_home), withContentDescription("Accueil"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                0),
//                        isDisplayed()));
//        frameLayout3.check(matches(isDisplayed()));

//        ViewInteraction frameLayout4 = onView(
//                allOf(withId(R.id.navigation_Jitter), withContentDescription("Jitter"),
//                        childAtPosition(
//                                childAtPosition(
//                                        withId(R.id.nav_view),
//                                        0),
//                                0),
//                        isDisplayed()));
//        frameLayout3.check(matches(isDisplayed()));
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

}
